# ruthless

./: .codecov.yml  .gitignore  .travis.yml  Cargo.toml  README.md  board_cosnt_gen.py  decimal_to_bitboard.py  eval.json  eval_new.json  eval_new_new.json  random_48_unsolved_short.json  rusty.sh
src/: cli.yml  cli_spec.yml  lib.rs  main.rs  rusty.rs
src/board/: bitboard.rs  constants.rs  do_moves_fast.rs  mod.rs  movelist.rs  test.rs  util.rs
src/eval/: mod.rs  negamax.rs  properties.rs  (+2 more)
training/: 48_random_solved_0.json  48_random_solved_1.json  48_random_solved_2.json  48_random_solved_3.json  48_random_solved_4.json  48_random_solved_5.json  48_random_solved_6.json  48_random_solved_7.json  49_random_solved_0.json  49_random_solved_1.json  49_random_solved_2.json  49_random_solved_3.json  49_random_solved_4.json  49_random_solved_5.json  49_random_solved_6.json  49_random_solved_7.json  50_random_solved_0.json  50_random_solved_1.json  50_random_solved_2.json  50_random_solved_3.json  50_random_solved_4.json  50_random_solved_5.json  50_random_solved_6.json  50_random_solved_7.json  51_random_solved_0.json  51_random_solved_1.json  51_random_solved_2.json  51_random_solved_3.json  51_random_solved_4.json  51_random_solved_5.json  51_random_solved_6.json  51_random_solved_7.json  52_random_solved_0.json  52_random_solved_1.json  52_random_solved_2.json  52_random_solved_3.json  52_random_solved_4.json  52_random_solved_5.json  52_random_solved_6.json  52_random_solved_7.json  (+26 more)
util/: board_cosnt_gen.py  check_pattern.py  number_to_bitboard.py  train_pattern.py
(+21 files in other folders)
