[package]
name = "ruthless"
version = "0.2.0"
authors = ["Ethan Jaszewski <ethanjaszewski@yahoo.com>"]

[dependencies]
time = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.4"
clap = {version = "~2.27.0", features = ["yaml"]}

[profile.release]
debug = true

[[bin]]
name = "ruthless"
path = "./src/main.rs"

[[bin]]
name = "rusty"
path = "./src/rusty.rs"
