[package]
name = "ruthless"
version = "0.1.0"
authors = ["Ethan Jaszewski <ethanjaszewski@yahoo.com>"]
edition = "2018"

[dependencies]
clap = { version = "2.32", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.6"
rayon = "1.0"

[profile.release]
debug = true
